--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,8 +60,8 @@
     --card-foreground: oklch(0.141 0.005 285.823);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.141 0.005 285.823);
-    --primary: oklch(0.645 0.246 16.439);
-    --primary-foreground: oklch(0.969 0.015 12.422);
+    --primary: oklch(0.723 0.219 149.579);
+    --primary-foreground: oklch(0.982 0.018 155.826);
     --secondary: oklch(0.967 0.001 286.375);
     --secondary-foreground: oklch(0.21 0.006 285.885);
     --muted: oklch(0.967 0.001 286.375);
@@ -71,7 +71,7 @@
     --destructive: oklch(0.577 0.245 27.325);
     --border: oklch(0.92 0.004 286.32);
     --input: oklch(0.92 0.004 286.32);
-    --ring: oklch(0.645 0.246 16.439);
+    --ring: oklch(0.723 0.219 149.579);
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
     --chart-3: oklch(0.398 0.07 227.392);
@@ -79,23 +79,23 @@
     --chart-5: oklch(0.769 0.188 70.08);
     --sidebar: oklch(0.985 0 0);
     --sidebar-foreground: oklch(0.141 0.005 285.823);
-    --sidebar-primary: oklch(0.645 0.246 16.439);
-    --sidebar-primary-foreground: oklch(0.969 0.015 12.422);
+    --sidebar-primary: oklch(0.723 0.219 149.579);
+    --sidebar-primary-foreground: oklch(0.982 0.018 155.826);
     --sidebar-accent: oklch(0.967 0.001 286.375);
     --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
     --sidebar-border: oklch(0.92 0.004 286.32);
-    --sidebar-ring: oklch(0.645 0.246 16.439);
-}
-
-.dark {
+    --sidebar-ring: oklch(0.723 0.219 149.579);
+  }
+  
+  .dark {
     --background: oklch(0.141 0.005 285.823);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.21 0.006 285.885);
     --card-foreground: oklch(0.985 0 0);
     --popover: oklch(0.21 0.006 285.885);
     --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.645 0.246 16.439);
-    --primary-foreground: oklch(0.969 0.015 12.422);
+    --primary: oklch(0.696 0.17 162.48);
+    --primary-foreground: oklch(0.393 0.095 152.535);
     --secondary: oklch(0.274 0.006 286.033);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.274 0.006 286.033);
@@ -105,7 +105,7 @@
     --destructive: oklch(0.704 0.191 22.216);
     --border: oklch(1 0 0 / 10%);
     --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.645 0.246 16.439);
+    --ring: oklch(0.527 0.154 150.069);
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
     --chart-3: oklch(0.769 0.188 70.08);
@@ -113,13 +113,14 @@
     --chart-5: oklch(0.645 0.246 16.439);
     --sidebar: oklch(0.21 0.006 285.885);
     --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.645 0.246 16.439);
-    --sidebar-primary-foreground: oklch(0.969 0.015 12.422);
+    --sidebar-primary: oklch(0.696 0.17 162.48);
+    --sidebar-primary-foreground: oklch(0.393 0.095 152.535);
     --sidebar-accent: oklch(0.274 0.006 286.033);
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.645 0.246 16.439);
-}
+    --sidebar-ring: oklch(0.527 0.154 150.069);
+  }
+  
 
 .dark {
     --background: oklch(0.145 0 0);
@@ -153,6 +154,33 @@
     --sidebar-accent-foreground: oklch(0.985 0 0);
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.556 0 0);
+}
+
+@layer components {
+    .react-international-phone-input {
+        @apply flex-1 !h-12 border-gray-300 dark:border-gray-600 focus:ring-red-500 focus:border-red-500 !rounded-r-lg;
+    }
+
+    .react-international-phone-country-selector
+        .react-international-phone-country-selector-button {
+        @apply !h-12 border-gray-300 dark:border-gray-600 focus:ring-red-500 focus:border-red-500 !rounded-l-lg;
+    }
+
+    .react-international-phone-country-selector-button__button-content {
+        @apply px-1;
+    }
+
+    .react-international-phone-country-selector-dropdown {
+        @apply rounded-lg p-2 mt-2 ml-2 !top-12 !left-1;
+    }
+
+    input {
+        @apply block w-full !h-12 pr-10 border-gray-300 dark:border-gray-600 focus:ring-red-500 focus:border-red-500 rounded-lg;
+    }
+
+    /* .react-international-phone-input-container {
+        @apply;
+    } */
 }
 
 @layer base {
